--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="lemon"></div>
         <div class="melon"></div>
         <div class="lemon secoundFruit"></div>
+        <div class="lemon secoundFruit third"></div>
         <div class="melon secoundFruit"></div>
         <div class="drop secoundFruit"></div>
         <div id="woodBox">
@@ -26,6 +27,8 @@
         </div>
         <div class="drop"></div>
         <div class="drop secoundFruit third"></div>
+        <div class="rain"></div>
+        <div class="rain secoundFruit"></div>
     </div>
     
     <script src="script.js"></script>
