--- a/index.html
+++ b/index.html
@@ -18,11 +18,18 @@
         <div class="drop secoundFruit"></div>
         <div id="woodBox">
             <div class="woodStick"></div>
+            <div class="woodStick secoundFruit rotateNinety"></div>
+            <div class="woodStick third"></div>
+            <div class="woodStick rotateNinety"></div>
+            <div class="woodStick"></div>
             <div class="woodStick secoundFruit"></div>
             <div class="woodStick"></div>
+            <div class="woodStick rotateNinety"></div>
             <div class="woodStick"></div>
-            <div class="woodStick"></div>
+            <div class="woodStick secoundFruit third"></div>
+            <div class="woodStick rotateNinety"></div>
             <div class="woodStick secoundFruit"></div>
+            <div class="woodStick"></div>
             <div class="woodStick"></div>
         </div>
         <div class="drop"></div>
