--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 <body>
     <div id="mainWrap">
         <div class="circle"></div>
-        <div class="lemon"></div>
         <div class="melon"></div>
         <div class="melon delayABit rotateNinety"></div>
+        <div class="lemon rotateNinety delayABit"></div>
         <div class="lemon secoundFruit"></div>
         <div class="lemon secoundFruit third"></div>
         <div class="melon secoundFruit"></div>
         <div class="drop secoundFruit"></div>
-        <div class="drop delayABit"></div>
+        <div class="melon bottom"></div>
         <div id="woodBox">
             <div class="woodStick"></div>
             <div class="woodStick secoundFruit rotateNinety"></div>
@@ -38,6 +38,8 @@
             <div class="woodStick"></div>
             <div class="woodStick"></div>
         </div>
+        <div class="lemon"></div>
+        <div class="drop delayABit"></div>
         <div class="drop"></div>
         <div class="drop secoundFruit delayABit"></div>
         <div class="drop secoundFruit third"></div>
