--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
     </div>
     <div id="header">
-        <img src="assets/cover-thumb.jpg" id="albumCover">
+        <a href="https://albums.patternbased.com/track/greene-drone-2" target="_blank"><img src="assets/cover-thumb.jpg" id="albumCover"></a>
         <div id="songInfo">
             <p><b>Greene Drone</b><br/> by Joseph Minadeo</p>
         <img src="assets/Pause_btn.svg" id="pauseTrack">
