--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="melon melonMove delayABit rotateNinety"></div>
         <div class="lemon lemonMove rotateNinety delayABit"></div>
         <div class="lemon lemonMove secoundFruit"></div>
-        <div class="lemon lemonMove secoundFruit third"></div>
+        <div class="lemon lemonMove secoundFruit thirdLine"></div>
         <div class="melon melonMove secoundFruit"></div>
         <div class="drop dropMove secoundFruit"></div>
         <div class="melon melonMove bottom"></div>
@@ -42,15 +42,15 @@
         <div class="lemon lemonMove"></div>
         <div class="drop dropMove delayABit"></div>
         <div class="drop dropMove"></div>
-        <div class="drop dropMove secoundFruit delayABit"></div>
-        <div class="drop dropMove secoundFruit third"></div>
+        <div class="drop dropMove secoundFruitLine delayABit"></div>
+        <div class="drop dropMove secoundFruit thirdLine"></div>
         <div class="drop dropMove secoundFruit third delayABit"></div>
         <div class="rain rainMove"></div>
         <div class="rain rainMove delayABit"></div>
         <div class="rain rainMove secoundFruit"></div>
-        <div class="startBtn">
-            <img src="assets/Play_btn.svg">
-        </div>
+    </div>
+    <div class="startBtn">
+        <img src="assets/Play_btn.svg">
     </div>
     <div id="header">
         <a href="https://albums.patternbased.com/track/greene-drone-2" target="_blank"><img src="assets/cover-thumb.jpg" id="albumCover"></a>
