Added Left wallker and four colors

--- a/crowdWalking/index.html
+++ b/crowdWalking/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crowd Animation Study for Strangers</title>
+    <title>Crowd Walking Animation Study</title>
     <link rel="stylesheet" href="walking.css">
     <script
     src="https://code.jquery.com/jquery-3.4.1.js"
@@ -14,6 +14,68 @@
 </head>
 <body>
     <div id="topRow">
+        <div id="girl1RTop" class="walkers fromRight girl1R"></div>
+        <div id="girl2RTop" class="walkers fromRight girl2R"></div>
+        <div id="girl3RTop" class="walkers fromRight girl3R"></div>
+        <div id="girl4RTop" class="walkers fromRight girl4R"></div>
+        <div id="girl5RTop" class="walkers fromRight girl5R"></div>
+        <div id="girl1LTop" class="walkers fromLeft girl1L"></div>
+        <div id="girl2LTop" class="walkers fromLeft girl2L"></div>
+        <div id="girl3LTop" class="walkers fromLeft girl3L"></div>
+        <div id="girl4LTop" class="walkers fromLeft girl4L"></div>
+        <div id="girl5LTop" class="walkers fromLeft girl5L"></div>
+    </div>
+    <div id="secondRow">
+        <div id="girl1RSecond" class="walkers fromRight girl1R"></div>
+        <div id="girl2RSecond" class="walkers fromRight girl2R"></div>
+        <div id="girl3RSecond" class="walkers fromRight girl3R"></div>
+        <div id="girl4RSecond" class="walkers fromRight girl4R"></div>
+        <div id="girl5RSecond" class="walkers fromRight girl5R"></div>
+        <div id="girl1LSecond" class="walkers fromLeft girl1L"></div>
+        <div id="girl2LSecond" class="walkers fromLeft girl2L"></div>
+        <div id="girl3LSecond" class="walkers fromLeft girl3L"></div>
+        <div id="girl4LSecond" class="walkers fromLeft girl4L"></div>
+        <div id="girl5LSecond" class="walkers fromLeft girl5L"></div>
+    </div>
+    <div id="thirdRow">
+        <div id="girl1RThird" class="walkers fromRight girl1R"></div>
+        <div id="girl2RThird" class="walkers fromRight girl2R"></div>
+        <div id="girl3RThird" class="walkers fromRight girl3R"></div>
+        <div id="girl4RThird" class="walkers fromRight girl4R"></div>
+        <div id="girl5RThird" class="walkers fromRight girl5R"></div>
+        <div id="girl1LThird" class="walkers fromLeft girl1L"></div>
+        <div id="girl2LThird" class="walkers fromLeft girl2L"></div>
+        <div id="girl3LThird" class="walkers fromLeft girl3L"></div>
+        <div id="girl4LThird" class="walkers fromLeft girl4L"></div>
+        <div id="girl5LThird" class="walkers fromLeft girl5L"></div>
+    </div>
+    <div id="fourthRow">
+        <div id="girl1RFourth" class="walkers fromRight girl1R"></div>
+        <div id="girl2RFourth" class="walkers fromRight girl2R"></div>
+        <div id="girl3RFourth" class="walkers fromRight girl3R"></div>
+        <div id="girl4RFourth" class="walkers fromRight girl4R"></div>
+        <div id="girl5RFourth" class="walkers fromRight girl5R"></div>
+        <div id="girl1LFourth" class="walkers fromLeft girl1L"></div>
+        <div id="girl2LFourth" class="walkers fromLeft girl2L"></div>
+        <div id="girl3LFourth" class="walkers fromLeft girl3L"></div>
+        <div id="girl4LFourth" class="walkers fromLeft girl4L"></div>
+        <div id="girl5LFourth" class="walkers fromLeft girl5L"></div>
+    </div>
+    <div id="fifthRow">
+        <div id="girl1RFifth" class="walkers fromRight girl1R"></div>
+        <div id="girl2RFifth" class="walkers fromRight girl2R"></div>
+        <div id="girl3RFifth" class="walkers fromRight girl3R"></div>
+        <div id="girl4RFifth" class="walkers fromRight girl4R"></div>
+        <div id="girl5RFifth" class="walkers fromRight girl5R"></div>
+        <div id="girl1LFifth" class="walkers fromLeft girl1L"></div>
+        <div id="girl2LFifth" class="walkers fromLeft girl2L"></div>
+        <div id="girl3LFifth" class="walkers fromLeft girl3L"></div>
+        <div id="girl4LFifth" class="walkers fromLeft girl4L"></div>
+        <div id="girl5LFifth" class="walkers fromLeft girl5L"></div>
+    </div>
+
+
+    <!-- <div id="topRow">
         <div id="girl1" class="walkers fromRight girl1R"></div>
         <div id="girl2" class="walkers fromLeft girl1L"></div>
     </div>
@@ -36,7 +98,7 @@
     <div id="fifthRow">
         <div id="girl9" class="walkers fromRight girl5R"></div>
         <div id="girl10" class="walkers fromLeft girl6L"></div>
-    </div>
+    </div> -->
   
     <!-- Scripts -->
     <script src="walkers.js"></script>
