--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Sight by Sioir Kitajima</title>
+    <title>Test Site by Sioir Kitajima</title>
     <style>
         html, body {
             width: 100%;
