Top page Mobile view

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         .wrapper {
             width: 600px;
             height: auto;
-            max-width: 80%;
-            margin: 10% auto;
+            max-width: 80vw;
+            margin: 10vw auto;
         }
         .buttons {
-            width: 100%;
+            width: calc(100% - 120px);
             height: auto;
             min-height: 100px;
             padding: 30px;
