Added Canvas method test

--- a/index.html
+++ b/index.html
@@ -39,18 +39,23 @@
 </head>
 <body>
     <div class="wrapper">
+        <a href="crowdWalking/">
+            <div class="buttons">
+                <h2>Crowd Walking Animation on Canvas (WIP)</h2>
+                <p>SVG + JS animation of a crowd walking.</p>
+            </div>
+        </a>
+        <a href="crowdWalking/">
+            <div class="buttons">
+                <h2>Crowd Walking Animation with Anime.js</h2>
+                <p>SVG + JS animation of a crowd walking.</p>
+            </div>
+        </a>
         <a href="dancingSquares/">
             <div class="buttons">
                 <h2>Dancing Square</h2>
                 <p>SVG + CSS animation to fit the BPM of the track.</p>
             </div>
-        </a>
-        <a href="crowdWalking/">
-            <div class="buttons">
-                <h2>Crowd Walking Animation</h2>
-                <p>SVG + JS animation of a crowd walking.</p>
-            </div>
-        </a>
-    </div>
+        </a>    </div>
 </body>
 </html>
