--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <a href="crowdWalking/">
+        <a href="crowdWalkingCanvas/">
             <div class="buttons">
                 <h2>Crowd Walking Animation on Canvas (WIP)</h2>
                 <p>SVG + JS animation of a crowd walking.</p>
