--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <div class="wrapper">
         <a href="crowdWalkingCanvas/">
             <div class="buttons">
-                <h2>Crowd Walking Animation on Canvas (WIP)</h2>
-                <p>SVG + JS animation of a crowd walking.</p>
+                <h2>Crowd Walking Animation with P5.js (WIP)</h2>
+                <p>PNG + JS animation of a crowd walking.</p>
             </div>
         </a>
         <a href="crowdWalking/">
