Strangers animation DP

--- a/index.html
+++ b/index.html
@@ -39,15 +39,21 @@
 </head>
 <body>
     <div class="wrapper">
+        <a href="strangersWalkers/">
+            <div class="buttons">
+                <h2>Crowd Animation (WIP)</h2>
+                <p>PNG sprite + HTML5 Canvas animation with data</p>
+            </div>
+        </a>
         <a href="crowdWalkingCanvas/">
             <div class="buttons">
-                <h2>Crowd Walking Animation with P5.js (WIP)</h2>
-                <p>PNG + JS animation of a crowd walking.</p>
+                <h2>Test for Crowd Animation with P5.js</h2>
+                <p>PNG sprite + HTML5 Canvas animation</p>
             </div>
         </a>
         <a href="crowdWalking/">
             <div class="buttons">
-                <h2>Crowd Walking Animation with Anime.js</h2>
+                <h2>Test for Crowd Animation with Anime.js</h2>
                 <p>SVG + JS animation of a crowd walking.</p>
             </div>
         </a>
@@ -56,6 +62,7 @@
                 <h2>Dancing Square</h2>
                 <p>SVG + CSS animation to fit the BPM of the track.</p>
             </div>
-        </a>    </div>
+        </a>    
+    </div>
 </body>
 </html>
