--- a/strangersWalkers/index.html
+++ b/strangersWalkers/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="topPanel"></div>
     <div id="topPanelContent">
-    <a href="https://siorikitajima.github.io/strangers/#/" target="_parent">
+    <a href="https://siorikitajima.github.io/strangers/#/data" target="_parent">
         <div class="infoBtn" id="learnBtn">
             <img src="images/infoIcons-learn.svg" alt="">
             <p>Learn More</p>
