Adding Soothing mode to index

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
 </head>
 <body>
     <div class="wrapper">
+        <a href="soothingMode/">
+            <div class="buttons">
+                <h2>Soothing Mode for Strangers</h2>
+                <p>P5.JS Canvas animation for Strangers app</p>
+            </div>
+        </a>
         <a href="strangersWalkers/">
             <div class="buttons">
                 <h2>Crowd Animation (WIP)</h2>
