--- a/soothingMode/index.html
+++ b/soothingMode/index.html
@@ -6,7 +6,7 @@
     <title>Soothing Mode for Strangers</title>
     <link rel="stylesheet" href="soothing.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.4/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.4/addons/p5.dom.js"></script>
     <script src="howler.js"></script>
 </head>
@@ -40,6 +40,6 @@
             <p class="sketchCredit">Code by Siori Kitajima<br/> Music by Joseph Minadeo "Prism"</p>
         </div>
     </div>
-    <script src="SketchZero.js" type="text/javascript"></script>
+    <script src="SoothingSketches.js" type="text/javascript"></script>
 </body>
 </html>
