--- a/soothingMode/iframe-two.html
+++ b/soothingMode/iframe-two.html
@@ -1,26 +1,45 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sketch Two</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.min.js"></script>
+    <style>
+    html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    }
+    </style>
+</head>
+<body>
+<script type="text/javascript">
 var inc = 0.002;
 var start = 0;
 
 function setup() {
- 
   createCanvas(windowWidth, windowHeight * 0.9);
+  frameRate(30);
 }
 
 function draw() {
-  var fillColor1 = color(125, 21, 29, 200);
-  var fillColor2 = color(237, 184, 100, 255);
-  background(fillColor2);
+var primaryColorDark = color(34, 34, 34);
+var keyColorOne = color('rgba(255, 53, 98, 0.8)');
+var keyColorThree = color(239, 160, 11);
+
+  background(keyColorThree);
 
   // Black Lines
   var mesh = height;
   var y;
   for (var hori = 0; hori < mesh; hori = hori + 10) {
-    stroke(50);
+    stroke(primaryColorDark);
     noFill();
     beginShape();
     var xoff = start;
     var horioff = noise(xoff * hori * 0.005);
-    for (var x = 0; x < width; x++) {
+    for (var x = 0; x < width; x = x + 4) {
       y = noise(xoff) * height * horioff;
       vertex(x, y);
       xoff += inc;
@@ -30,11 +49,11 @@ function draw() {
   }
 
   // Black Filled
-  fill(50);
+  fill(primaryColorDark);
   beginShape();
   var xoffBF = start + 200;
   var horioffBF = noise(xoffBF * 2 * 0.005);
-  for (var xBF = 0; xBF < width; xBF++) {
+  for (var xBF = 0; xBF < width; xBF = xBF + 4) {
     noStroke();
     yBF = noise(xoffBF) * height * horioffBF + height/3;
     vertex(xBF, yBF);
@@ -46,7 +65,7 @@ function draw() {
   endShape();
 
   // Red Floating
-  fill(fillColor1);
+  fill(keyColorOne);
   noStroke();
   beginShape();
   var yoffRF = start + noise(0, 0.01);
@@ -57,20 +76,9 @@ function draw() {
   }
   endShape(CLOSE);
 
-  // Yellow Floating
-  translate(width / 2, 0);
-  rotate(45);
-
-  fill(fillColor2);
-  beginShape();
-  var yoffYF = start + noise(0.04, 0.05);
-  for (var yYF = 0; yYF < height; yYF++) {
-    var xYF = noise(yoffYF) * width * 1.3;
-    vertex(xYF, yYF);
-    yoffYF -= inc * 0.3;
-  }
-  endShape(CLOSE);
-
   start += inc;
 
 }
+    </script>
+</body>
+</html>
