--- a/soothingMode/iframe-two.html
+++ b/soothingMode/iframe-two.html
@@ -19,7 +19,7 @@ var inc = 0.002;
 var start = 0;
 
 function setup() {
-  createCanvas(windowWidth, windowHeight * 0.9);
+  createCanvas(windowWidth, windowHeight);
   frameRate(30);
 }
 
