--- a/strangersWalkers/index.html
+++ b/strangersWalkers/index.html
@@ -11,27 +11,39 @@
     <script src="walkerSketch3.js" type="text/javascript"></script>
 </head>
 <body>
-    <div id="topPanel"></div>
+    <div id="topPanel">
     <div id="topPanelContent">
-    <a href="https://siorikitajima.github.io/strangers/#/data" target="_parent">
-        <div class="infoBtn" id="learnBtn">
-            <img src="images/infoIcons-learn.svg" alt="">
-            <p>Learn More</p>
+        <div class="infoBtn" id="issueHDiv">
+            <h1 class="issueH1" id="h1Mobile"></h1>
+            <p class="issueP" id="pMobile"></p>
         </div>
-    </a>
-    <a href="https://siorikitajima.github.io/strangers/#/data" target="_parent">
-        <div class="infoBtn" id="helpBtn">
-            <img src="images/infoIcons-help.svg" alt="">
-            <p>Find Help</p>
-        </div>
+        <a id="learnLink" onclick="learnLinkOpen()">
+            <div class="infoBtn" id="learnBtn">
+                <img src="images/infoIcons-learn.svg" alt="">
+                <p>Learn More</p>
+            </div>
         </a>
-        <a href="https://siorikitajima.github.io/strangers/#/voices" target="_parent">
+        <a id="helpLink" onclick="helpLinkOpen()">
+            <div class="infoBtn" id="helpBtn">
+                <img src="images/infoIcons-help.svg" alt="">
+                <p>Find Help</p>
+            </div>
+        </a>
+        <a id="voicesLink" onclick="voicesLinkOpen()">
         <div class="infoBtn" id="voicesBtn">
             <img src="images/infoIcons-voices.svg" alt="">
             <p>Listen to Voices</p>
         </div>
         </a>
+        <a id="shareLink" onclick="shareLinkOpen()">
+            <div class="infoBtn" id="shareBtn">
+                <img src="images/infoIcons-share.svg" alt="">
+                <p>Share</p>
+            </div>
+        </a>
     </div>
+    </div>
+
     <div id="floor">
         <img id="GroundImg" src="images/numbers_gray.png" alt="">
     </div>
@@ -40,12 +52,13 @@
             <img class="arrows" src="images/left-arrow.svg" alt="">
         </div>
         <div id="thisIssue">
-            <h1 id="issueH1">Mental Health Issues</h1>
-            <p id="issueP">A wide range of conditions that affect mood, thinking, and behavior.</p>
+            <h1 class="issueH1" id="h1Screen"></h1>
+            <p class="issueP" id="pScreen"></p>
         </div>
         <div id="nextIssue" onclick="nextColor()">
             <img class="arrows" src="images/right-arrow.svg" alt="">
         </div>
     </div>
+    <div id="copied">URL Copied!</div>
 </body>
 </html>
