--- a/soothingMode/iframe-two.html
+++ b/soothingMode/iframe-two.html
@@ -24,9 +24,9 @@ function setup() {
 }
 
 function draw() {
-var primaryColorDark = color(34, 34, 34);
-var keyColorOne = color('rgba(255, 53, 98, 0.8)');
-var keyColorThree = color(239, 160, 11);
+var primaryColorDark = color(76, 133, 0);
+var keyColorOne = color('rgba(224,224,224, 0.7)');
+var keyColorThree = color(207, 167, 104);
 
   background(keyColorThree);
 
