--- a/strangersWalkers/iPadindex.html
+++ b/strangersWalkers/iPadindex.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="walking.css">
 
     <!-- <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script> -->
-    <script src="walkerSketch9-iPad.js" type="text/javascript">
+    <script src="walkerSketch10iOS.js" type="text/javascript">
     // function init() {
     //     var stage = new createjs.Stage("demoCanvas");
     //     var circle = new createjs.Shape();
