--- a/strangersWalkers/iOS/index.html
+++ b/strangersWalkers/iOS/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.4/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.4/addons/p5.dom.js"></script>
     <script src="../p5.play.js"></script>
-    <link rel="stylesheet" href="../walking.css">
+    <link rel="stylesheet" href="walking-iOS.css">
     <script src="walkerSketch10iOS.js" type="text/javascript"></script>
 </head>
 <body>
