--- a/soothingMode/iframe-two.html
+++ b/soothingMode/iframe-two.html
@@ -10,6 +10,7 @@
     width: 100%;
     height: 100%;
     margin: 0;
+    padding: 0;
     }
     </style>
 </head>
@@ -19,6 +20,14 @@ var inc = 0.002;
 var start = 0;
 
 function setup() {
+  if (typeof canvas === "object" && canvas !== null) {
+        canvas.width = 0;
+        canvas.height = 0;
+    
+        canvas.remove();
+        delete canvas;
+        canvas = null;
+    }
   createCanvas(windowWidth, windowHeight);
   frameRate(30);
 }
