--- a/strangersWalkers/iOS/index.html
+++ b/strangersWalkers/iOS/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.4/addons/p5.dom.js"></script>
     <script src="../p5.play.js"></script>
     <link rel="stylesheet" href="walking-iOS.css">
-    <script src="walkerSketch10iOS.js" type="text/javascript"></script>
+    <script src="strangersPerspectiveiOS.js" type="text/javascript"></script>
 </head>
 <body>
     <div id="topPanel">
