--- a/strangersWalkers/index.html
+++ b/strangersWalkers/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.4/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.4/addons/p5.dom.js"></script>
     <script src="p5.play.js"></script>
-    <script src="walkerSketch8.js" type="text/javascript"></script>
+    <script src="strangersPerspective.js" type="text/javascript"></script>
 </head>
 <body>
     <div id="topPanel">
