--- a/strangersWalkers/iOS/index.html
+++ b/strangersWalkers/iOS/index.html
@@ -4,7 +4,7 @@
     <!-- <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Crowd Walking Animation Test</title>
+    <title>Perspective Animation for Strangers iOS</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.4/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.4/addons/p5.dom.js"></script>
     <script src="../p5.play.js"></script>
