--- a/strangersWalkers/iOS/index.html
+++ b/strangersWalkers/iOS/index.html
@@ -5,15 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <title>Perspective Animation for Strangers iOS</title>
+    <link rel="stylesheet" href="walking-iOS.css">
+    <script>
+        document.addEventListener("DOMContentLoaded", function() { 
+            setTimeout(function(){ 
+                document.getElementById("modalBG").style.display = "none";
+             }, 1000);
+        });
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.4/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.4/addons/p5.dom.js"></script>
     <script src="../p5.play.js"></script>
-    <link rel="stylesheet" href="walking-iOS.css">
     <script src="strangersPerspectiveiOS.js" type="text/javascript"></script>
 </head>
 <body>
+    <div id="modalBG">
+        <div class="loadingSpinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+    </div>
     <div id="topPanel">
-    <div id="topPanelContent">
         <div class="infoBtn" id="issueHDiv">
             <h1 class="issueH1" id="h1Mobile"></h1>
             <p class="issueP" id="pMobile"></p>
@@ -42,7 +51,6 @@
                 <p>Share</p>
             </div>
         </a>
-    </div>
     </div>
 
     <canvas id="demoCanvas" width="500" height="500"></canvas>
