--- a/strangersWalkers/index.html
+++ b/strangersWalkers/index.html
@@ -6,14 +6,24 @@
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <title>Perspective Animation for Strangers</title>
     <link rel="stylesheet" href="walking.css">
+    <script>
+        document.addEventListener("DOMContentLoaded", function() { 
+            setTimeout(function(){ 
+                document.getElementById("modalBG").style.display = "none";
+             }, 1000);
+        });
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.4/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.4/addons/p5.dom.js"></script>
     <script src="p5.play.js"></script>
     <script src="strangersPerspective.js" type="text/javascript"></script>
 </head>
 <body>
+    <div id="modalBG">
+        <div class="loadingSpinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+    </div>
+
     <div id="topPanel">
-    <div id="topPanelContent">
         <div class="infoBtn" id="issueHDiv">
             <h1 class="issueH1" id="h1Mobile"></h1>
             <p class="issueP" id="pMobile"></p>
@@ -43,7 +53,6 @@
             </div>
         </a>
     </div>
-    </div>
 
     <div id="floor">
         <img id="GroundImg" src="images/numbers_gray.png" alt="">
@@ -61,5 +70,7 @@
         </div>
     </div>
     <div id="copied">URL Copied!</div>
+
+
 </body>
 </html>
