prevent event on loading / iOS adjustment

--- a/strangersWalkers/iOS/index.html
+++ b/strangersWalkers/iOS/index.html
@@ -19,6 +19,7 @@
     <script src="strangersPerspectiveiOS.js" type="text/javascript"></script>
 </head>
 <body>
+    <div id="panelBtn" onclick="panelControl()"></div>
     <div id="modalBG">
         <div class="loadingSpinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
     </div>
